# reqrio

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCUMENT_zh.md  EXPORT.md  HEADER.md  README.md  README_zh.md
.github/workflows/: main.yml
c++/: CMakeLists.txt  Response.cpp  Response.h
java/: README.md  pom.xml
java/src/main/java/org/xllgl2017/: Library.java  ScReqCallback.java  Session.java  WebSocket.java
java/src/test/java/: HttpUtil2.java  Main.java
json/: Cargo.toml  README.md
json/src/: ext.rs  json_impl.rs  lib.rs  number.rs  object.rs  parser.rs
nodejs/: README.md  Response.js  bindings.js  index.js  package.json  session.js  test.js  ws.js
py/: README.md  pyproject.toml  setup.py
py/reqrio/: __init__.py  bindings.py  session.py  websocket.py
py/tests/: test_session.py
qt/: CMakeLists.txt  Header.cpp  Header.h  Response.cpp  Response.h  Session.cpp  Session.h  Timeout.cpp  Timeout.h  WebSocket.cpp  WebSocket.h  bindings.h  test.cpp
reqrio/: Cargo.toml  README.md  README_zh.md  build.rs
reqrio-go/: README.md  go.mod  main.go
reqrio-go/reqrio/: header.go  method.go  response.go  session.go  websocket.go
reqrio-java/: README.md  pom.xml
reqrio-java/src/test/java/: I_Mao.java  Main.java
reqrio-js/: README.md  Response.js  bindings.js  session.js  test.js  ws.js
reqrio-py/: MANIFEST.in  README.md  pyproject.toml  setup.py
reqrio-py/example/: finger.py  req.py
reqrio-py/reqrio/: __init__.py  _finger.py  _session.py  alpn.py  b64.py  bindings.py  cipher.py  hash.py  header.py  method.py  pool.py  rcode.py  response.py  session.py  stream.py  util.py  websocket.py
reqrio-py/tests/: test_cipher.py  test_session.py  test_websocket.py
reqrio-qt/: Algorithm.h  Body.cpp  Body.h  CMakeLists.txt  CipherSuite.h  CompressionMethod.h  Cookie.cpp  Cookie.h  EcPointFormat.h  ExtensionType.h  Fingerprint.cpp  Fingerprint.h  Group.h  H2SettingType.h  Header.h  Response.cpp  Response.h  Session.cpp  Session.h  Url.cpp  Url.h  Version.h  WebSocket.cpp  bindings.h  test.cpp  util.h
reqrio/examples/: async_h1.rs  async_server.rs  m3u8_down.rs  sc_req_example.rs  sync_h1.rs  test_websocket.rs
reqrio/src/: acq.rs  body.rs  buffer.rs  cookie.rs  error.rs  export.rs  ext.rs  fingerprint.rs  lib.rs  logger.rs  reader.rs  request.rs  scq.rs  timeout.rs
reqrio/src/body/: ext.rs  mod.rs  reader.rs
reqrio/src/body/multi_form/: error.rs  field.rs  file_form.rs  mod.rs
reqrio/src/coder/: mod.rs
reqrio/src/coder/hpack/: mod.rs
reqrio/src/export/: mod.rs  req.rs  wss.rs
reqrio/src/export/req/: body.rs  finger.rs  mod.rs  response.rs  url.rs
reqrio/src/form_data/: buffer.rs  field.rs  file_form.rs  filed.rs  mod.rs  reader.rs
reqrio/src/hpack/: decode.rs  encode.rs  encode2.rs  error.rs  index.rs  item.rs  mod.rs
reqrio/src/hpack/encoder/: error.rs  mod.rs  primitives.rs
reqrio/src/hpack/huffman/: encode.rs  mod.rs
reqrio/src/hpack/huffman/decode/: mod.rs  reader.rs  table.rs
reqrio/src/hpack/table/: dynamic.rs  mod.rs  static.rs
reqrio/src/huffman/: error.rs  mod.rs
reqrio/src/huffman/encoder/: mod.rs
reqrio/src/packet/: mod.rs
reqrio/src/packet/h2c/: mod.rs  reader.rs
reqrio/src/packet/h2c/frame/: buffer.rs  flag.rs  mod.rs  reader.rs  setting.rs  typo.rs
reqrio/src/packet/http/: cookie.rs  mod.rs  response.rs
reqrio/src/packet/http/content_type/: application.rs  font.rs  image.rs  mod.rs  text.rs  video.rs
reqrio/src/packet/http/header/: key.rs  method.rs  mod.rs  status.rs  value.rs
reqrio/src/packet/http/header/reader/: h1.rs  h2.rs  mod.rs
reqrio/src/packet/ws/: mod.rs  payload.rs  typ.rs
reqrio/src/stream/: astream.rs  async_stream.rs  config.rs  cstream.rs  kind.rs  mod.rs  proxy.rs  sync_stream.rs  ws.rs
reqrio/src/stream/aync/: ext.rs  flush.rs  mod.rs  read.rs  shutdown.rs  tcp.rs  write.rs
reqrio/src/stream/aync/tls/: connect.rs  mod.rs
reqrio/src/time/: mod.rs  timeout.rs
reqrio/src/url/: mod.rs  uri.rs
reqrio/tests/: aync_test.rs  sync_test.rs
reqtls/: Cargo.toml  README.md  README_zh.md  build.rs  roots
reqtls/lib/windows/msvc/: versus.lib  zstd.lib
reqtls/src/: alpn.rs  bytes.rs  connection.rs  derived.rs  error.rs  ext.rs  ffi.rs  finger.rs  fingerprint.rs  hkdf.rs  lib.rs  prf.rs  rand.rs  range.rs  record.rs  secret_key.rs  share_key.rs  version.rs
reqtls/src/boring/: aead.rs  base64.rs  bindings.rs  certificate.rs  cipher.rs  ec_curve.rs  evp_curve.rs  ffi.rs  ml_kem.rs  mod.rs  padding.rs  signature.rs
reqtls/src/boring/cipher/: base64.rs  mod.rs  padding.rs
reqtls/src/boring/cipher/rsa/: bindings.rs  mod.rs
reqtls/src/boring/evp/: aead.rs  cipher.rs  curve.rs  error.rs  mod.rs
reqtls/src/boring/hash/: error.rs  hasher.rs  hmac.rs  mod.rs
reqtls/src/boring/rsa/: bindings.rs  certificate.rs  key.rs  mod.rs  padding.rs
reqtls/src/boring/rsa/certificate/: cert_type.rs  mod.rs  store.rs
reqtls/src/boring/rsa/certificate/siger/: alt_name.rs  basic_constraints.rs  extend.rs  key_identifier.rs  key_usage.rs  mod.rs  subject.rs
reqtls/src/buffer/: decode.rs  encode.rs  error.rs  ext.rs  mod.rs
reqtls/src/cipher/: iv.rs  key.rs  mod.rs  suite.rs
reqtls/src/coder/: bindings.rs  mod.rs  zstd.rs
reqtls/src/derived/: mod.rs
reqtls/src/dns/: add.rs  answer.rs  authoritative.rs  domain.rs  error.rs  mod.rs  query.rs  stream.rs  value.rs
reqtls/src/error/: buffer.rs  handshake.rs  mod.rs
reqtls/src/export/: cipher.rs  coder.rs  hasher.rs  mod.rs
reqtls/src/extend/: algorithm.rs  alps.rs  certificate.rs  client_hello.rs  formats.rs  group.rs  key_share.rs  mod.rs  pre_share_key.rs  psk_key.rs  server_name.rs  status.rs  version.rs
reqtls/src/extend/ech/: aead.rs  kdf.rs  mod.rs
reqtls/src/key/: block.rs  derived.rs  mod.rs
reqtls/src/message/: alert.rs  certificate.rs  client_hello.rs  encrypted_extension.rs  key_exchange.rs  mod.rs  payload.rs  server_hello.rs  session_ticket.rs
reqtls/src/secret/: key.rs
reqtls/src/suite/: cipher.rs  mod.rs  suite.rs
reqtls/src/url/: addr.rs  error.rs  mod.rs  param.rs  protocol.rs  scheme.rs  uri.rs
(+23 files in other folders)
