[package]
name = "reqrio"
version = "0.2.0-alpha1"
edition = "2024"
readme = "README.md"
description = "A lightweight, high concurrency HTTP request library"
license-file = "../LICENSE-APACHE"
repository = "https://github.com/xllgl2017/reqrio/tree/master/reqrio"

[lib]
name = "reqrio"
crate-type = ['rlib', 'cdylib']

[dependencies]
reqrio-json = { workspace = true }
httlib-hpack = "0.1.3"
serde = { workspace = true, optional = true }
tokio = { version = "1.49.0", features = ["time", "net", "io-util", "macros", 'rt-multi-thread'], optional = true }
reqtls = { workspace = true, features = ["zstd"] }

[features]
aync = ["tokio"]
export = ["reqtls/export"]
dylib = ["reqtls/dylib"]


