[package]
name = "reqrio"
version = "0.3.0-alpha1"
edition = "2024"
readme = "README.md"
description = "A lightweight, high-performance, fingerprint-based HTTP request library."
license-file = "../LICENSE-APACHE"
repository = "https://github.com/xllgl2017/reqrio/tree/main/reqrio"

[lib]
name = "reqrio"
crate-type = ['rlib', 'cdylib']

[dependencies]
reqrio-json = { workspace = true }
serde = { workspace = true, optional = true }
tokio = { version = "1", features = ["time", "net", "io-util", "macros", 'rt-multi-thread'], optional = true }
reqtls = { workspace = true, features = ["zstd"] }
pin-project-lite = { version = "0.2", optional = true }

[features]
aync = ["tokio", "pin-project-lite"]
export = ["reqtls/export"]
dylib = ["reqtls/dylib"]


