[package]
name = "reqtls"
version = "0.1.0-rc1"
edition = "2024"
readme = "README.md"
description = "A tls lib"
license-file = "../LICENSE-APACHE"
repository = "https://github.com/xllgl2017/reqrio/tree/master/reqtls"

[dependencies]
hex = "0.4.3"
getrandom = "0.4.0-rc.0"
bytemuck = "1.24.0"
brotli = "8.0.2"
flate2 = "1.1.8"
urlencoding = { version = "2.1.3", optional = true }

[features]
zstd = []
dylib = []
tls = []